:sparkles: [#4993] Implement fetching select(boxes) options from Referentielijsten
this was previously possible with logic and service fetch, but this functionality provides a shortcut to more easily integrate with Re ferentielijsten API

--- a/pyright.pyproject.toml
+++ b/pyright.pyproject.toml
@@ -32,6 +32,7 @@ include = [
     # Interaction with the outside world
     "src/openforms/contrib/zgw/service.py",
     "src/openforms/contrib/objects_api/",
+    "src/openforms/contrib/referentielijsten/",
     # Emails
     "src/openforms/emails/templatetags/cosign_information.py",
     # Logging
