:heavy_plus_sign: [#4931] Add django-admin-rangefilter
This allows filtering the submissions on a date range rather than
Django's predefined datetime field filters.

--- a/requirements/base.in
+++ b/requirements/base.in
@@ -36,6 +36,7 @@ schwifty
 # Framework libraries
 django ~= 4.2
 django-admin-index
+django-admin-rangefilter
 django-autoslug
 django-axes[ipware]
 django-camunda
