:label: [#4931] Fix missing local import and clean up type hints
Fixed the type annotation errors that were cluttering actual errors,
now we should not get any typing regressions anymore in the logevent
and models module in the logging app.

--- a/pyright.pyproject.toml
+++ b/pyright.pyproject.toml
@@ -34,6 +34,9 @@ include = [
     "src/openforms/contrib/objects_api/",
     # Emails
     "src/openforms/emails/templatetags/cosign_information.py",
+    # Logging
+    "src/openforms/logging/logevent.py",
+    "src/openforms/logging/models.py",
     # Registrations
     "src/openforms/registrations/tasks.py",
     "src/openforms/registrations/contrib/email/",
