--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -10,6 +10,7 @@ jobs:
   update-trivy-db:
     runs-on: ubuntu-latest
     steps:
+      - uses: oras-project/setup-oras@v1
       - name: Get current date
         id: date
         run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
