--- a/src/openforms/registrations/contrib/json_dump/tests/files/vcr_cassettes/JSONDumpBackendTests/JSONDumpBackendTests.test_no_file_upload_for_multiple_files_component.yaml
+++ b/src/openforms/registrations/contrib/json_dump/tests/files/vcr_cassettes/JSONDumpBackendTests/JSONDumpBackendTests.test_no_file_upload_for_multiple_files_component.yaml
@@ -1,7 +1,6 @@
 interactions:
 - request:
-    body: '"{\"values\": {\"auth_bsn\": \"123456789\", \"firstName\": \"We Are\"},
-      \"schema\": {\"$schema\": \"https://json-schema.org/draft/2020-12/schema\",
+    body: '"{\"values\": {\"file\": []}, \"schema\": {\"$schema\": \"https://json-schema.org/draft/2020-12/schema\",
       \"type\": \"object\", \"properties\": {\"static_var_1\": {\"type\": \"string\",
       \"pattern\": \"^cool_pattern$\"}, \"form_var_1\": {\"type\": \"string\"}, \"form_var_2\":
       {\"type\": \"string\"}, \"attachment\": {\"type\": \"string\", \"contentEncoding\":
@@ -17,39 +16,36 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '516'
+      - '474'
       Content-Type:
       - application/json
       User-Agent:
       - python-requests/2.32.2
     method: POST
-    uri: http://localhost/fake_endpoint
+    uri: http://localhost/json_plugin
   response:
     body:
-      string: '<!doctype html>
-
-        <html lang=en>
-
-        <title>404 Not Found</title>
-
-        <h1>Not Found</h1>
-
-        <p>The requested URL was not found on the server. If you entered the URL manually
-        please check your spelling and try again.</p>
-
-        '
+      string: "{\n  \"data\": {\n    \"schema\": {\n      \"$schema\": \"https://json-schema.org/draft/2020-12/schema\",\n
+        \     \"additionalProperties\": false,\n      \"properties\": {\n        \"attachment\":
+        {\n          \"contentEncoding\": \"base64\",\n          \"type\": \"string\"\n
+        \       },\n        \"form_var_1\": {\n          \"type\": \"string\"\n        },\n
+        \       \"form_var_2\": {\n          \"type\": \"string\"\n        },\n        \"static_var_1\":
+        {\n          \"pattern\": \"^cool_pattern$\",\n          \"type\": \"string\"\n
+        \       }\n      },\n      \"required\": [\n        \"static_var_1\",\n        \"form_var_1\",\n
+        \       \"form_var_2\"\n      ],\n      \"type\": \"object\"\n    },\n    \"values\":
+        {\n      \"file\": []\n    }\n  },\n  \"message\": \"Data received\"\n}\n"
     headers:
       Connection:
       - close
       Content-Length:
-      - '207'
+      - '691'
       Content-Type:
-      - text/html; charset=utf-8
+      - application/json
       Date:
       - Tue, 21 Jan 2025 14:31:40 GMT
       Server:
       - Werkzeug/3.1.3 Python/3.12.8
     status:
-      code: 404
-      message: NOT FOUND
+      code: 201
+      message: CREATED
 version: 1
