:ok_hand: [#4980] Process PR feedback
* Revise result in register_submission: submission.registration_result automatically gets written with the return value of register_submission, see https://github.com/open-formulieren/open-forms/blob/794bbdae3c62eb4e4ce429661b402b57f24f4605/src/openforms/registrations/tasks.py#L338
* Remove explicit boolean assignments to properties in Variables: this is not necessary in JSX
* Add the json_dump app to the pyright.pyproject.toml, so it is type checked in CI. Also update the types where necessary

--- a/pyright.pyproject.toml
+++ b/pyright.pyproject.toml
@@ -40,6 +40,7 @@ include = [
     # Registrations
     "src/openforms/registrations/tasks.py",
     "src/openforms/registrations/contrib/email/",
+    "src/openforms/registrations/contrib/json_dump/",
     "src/openforms/registrations/contrib/stuf_zds/options.py",
     "src/openforms/registrations/contrib/stuf_zds/plugin.py",
     "src/openforms/registrations/contrib/stuf_zds/typing.py",
