--- a/pyright.pyproject.toml
+++ b/pyright.pyproject.toml
@@ -1,6 +1,6 @@
 [tool.pyright]
 include = [
-    "src/openforms/api/urls",
+    "src/openforms/api/urls.py",
     # plugin/registry-related code (base classes etc.)
     "src/openforms/plugins",
     "src/openforms/appointments/base.py",
