:recycle: [#4510] Refactor the submission completion validation implementation
The completion validation + communicating the status URL back to
the frontend was a weird and unconventional construct. The API
documentation was also outdated with what is actually being
returned.

This has now been reworked and stabilized to ensure a consistent
format of validation errors that can be picked up and processed
by the frontend/SDK reliably.

--- a/pyright.pyproject.toml
+++ b/pyright.pyproject.toml
@@ -52,6 +52,7 @@ include = [
     "src/openforms/registrations/contrib/objects_api/typing.py",
     "src/openforms/registrations/contrib/zgw_apis/",
     # core submissions app
+    "src/openforms/submissions/api/validation.py",
     "src/openforms/submissions/cosigning.py",
     "src/openforms/submissions/report.py",
     # our own template app/package on top of Django
