--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,15 +1,15 @@
 [bumpversion]
 commit = False
 tag = False
-current_version = 3.0.0
+current_version = 3.1.0-alpha.0
 parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<pre>[a-z]+)\.(?P<build>\d+))?
-serialize = 
+serialize =
 	{major}.{minor}.{patch}-{pre}.{build}
 	{major}.{minor}.{patch}
 
 [bumpversion:part:pre]
 first_value = alpha
-values = 
+values =
 	alpha
 	beta
 	rc
