--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -475,7 +475,7 @@ jobs:
           docker compose run -e RELEASE=${RELEASE} web \
             python src/manage.py migrate
         env:
-          RELEASE: '3.1.0-alpha.1'
+          RELEASE: '3.1.0'
           # ensure local image gets used
           TAG: ${{ needs.docker_build_setup.outputs.version }}
 
