--- a/pyright.pyproject.toml
+++ b/pyright.pyproject.toml
@@ -25,6 +25,7 @@ include = [
     # Formio tooling
     "src/openforms/formio/typing/",
     "src/openforms/formio/formatters/",
+    "src/openforms/formio/dynamic_config/referentielijsten.py",
     # Core forms app
     "src/openforms/forms/api/serializers/logic/action_serializers.py",
     # Payments
