--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -196,6 +196,8 @@ jobs:
 
   e2etests:
     runs-on: ubuntu-24.04
+    if: >-
+      ${{ ! contains(github.event.head_commit.message, '[skip: e2e]') }}
     strategy:
       fail-fast: false
       matrix:
