--- a/src/openforms/formio/dynamic_config/tests/files/vcr_cassettes/RadioReferentielijstenOptionsTests/RadioReferentielijstenOptionsTests.test_items_not_found.yaml
+++ b/src/openforms/formio/dynamic_config/tests/files/vcr_cassettes/RadioReferentielijstenOptionsTests/RadioReferentielijstenOptionsTests.test_items_not_found.yaml
@@ -6,6 +6,8 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate, br
+      Accept-Language:
+      - nl
       Connection:
       - keep-alive
       User-Agent:
@@ -22,10 +24,10 @@ interactions:
       - '52'
       Content-Security-Policy:
       - 'font-src ''self'' fonts.gstatic.com; script-src ''self'' ''unsafe-inline'';
-        base-uri ''self''; object-src ''none''; worker-src ''self'' blob:; style-src
-        ''self'' ''unsafe-inline'' fonts.googleapis.com; img-src ''self'' data: cdn.redoc.ly;
-        default-src ''self''; frame-src ''self''; frame-ancestors ''none''; form-action
-        ''self'''
+        worker-src ''self'' blob:; frame-ancestors ''none''; img-src ''self'' data:
+        cdn.redoc.ly; default-src ''self''; base-uri ''self''; frame-src ''self'';
+        style-src ''self'' ''unsafe-inline'' fonts.googleapis.com; object-src ''none'';
+        form-action ''self'''
       Content-Type:
       - application/json
       Cross-Origin-Opener-Policy:
