--- a/src/openforms/formio/dynamic_config/tests/files/vcr_cassettes/RadioReferentielijstenOptionsTests/RadioReferentielijstenOptionsTests.test_success.yaml
+++ b/src/openforms/formio/dynamic_config/tests/files/vcr_cassettes/RadioReferentielijstenOptionsTests/RadioReferentielijstenOptionsTests.test_success.yaml
@@ -6,6 +6,8 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate, br
+      Accept-Language:
+      - nl
       Connection:
       - keep-alive
       User-Agent:
@@ -14,9 +16,9 @@ interactions:
     uri: http://localhost:8004/api/v1/items?tabel__code=tabel1
   response:
     body:
-      string: '{"count":2,"next":null,"previous":null,"results":[{"code":"option1","naam":"Option
-        1","begindatumGeldigheid":"2025-01-07T14:17:53Z","einddatumGeldigheid":null,"aanvullendeGegevens":null},{"code":"option2","naam":"Option
-        2","begindatumGeldigheid":"2025-01-07T14:17:59Z","einddatumGeldigheid":null,"aanvullendeGegevens":null}]}'
+      string: '{"count":2,"next":null,"previous":null,"results":[{"code":"option2","naam":"Option
+        2","begindatumGeldigheid":"2025-01-07T14:17:59Z","einddatumGeldigheid":null,"aanvullendeGegevens":null},{"code":"option1","naam":"Option
+        1","begindatumGeldigheid":"2025-01-07T14:17:53Z","einddatumGeldigheid":null,"aanvullendeGegevens":null}]}'
     headers:
       Allow:
       - GET, HEAD, OPTIONS
@@ -24,10 +26,10 @@ interactions:
       - '325'
       Content-Security-Policy:
       - 'font-src ''self'' fonts.gstatic.com; script-src ''self'' ''unsafe-inline'';
-        base-uri ''self''; object-src ''none''; worker-src ''self'' blob:; style-src
-        ''self'' ''unsafe-inline'' fonts.googleapis.com; img-src ''self'' data: cdn.redoc.ly;
-        default-src ''self''; frame-src ''self''; frame-ancestors ''none''; form-action
-        ''self'''
+        worker-src ''self'' blob:; frame-ancestors ''none''; img-src ''self'' data:
+        cdn.redoc.ly; default-src ''self''; base-uri ''self''; frame-src ''self'';
+        style-src ''self'' ''unsafe-inline'' fonts.googleapis.com; object-src ''none'';
+        form-action ''self'''
       Content-Type:
       - application/json
       Cross-Origin-Opener-Policy:
