--- a/src/openforms/formio/dynamic_config/tests/files/vcr_cassettes/SelectReferentielijstenOptionsTests/SelectReferentielijstenOptionsTests.test_items_not_found.yaml
+++ b/src/openforms/formio/dynamic_config/tests/files/vcr_cassettes/SelectReferentielijstenOptionsTests/SelectReferentielijstenOptionsTests.test_items_not_found.yaml
@@ -6,6 +6,8 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate, br
+      Accept-Language:
+      - nl
       Connection:
       - keep-alive
       User-Agent:
@@ -21,10 +23,11 @@ interactions:
       Content-Length:
       - '52'
       Content-Security-Policy:
-      - 'img-src ''self'' data: cdn.redoc.ly; frame-ancestors ''none''; base-uri ''self'';
-        frame-src ''self''; style-src ''self'' ''unsafe-inline'' fonts.googleapis.com;
-        default-src ''self''; script-src ''self'' ''unsafe-inline''; object-src ''none'';
-        form-action ''self''; worker-src ''self'' blob:; font-src ''self'' fonts.gstatic.com'
+      - 'font-src ''self'' fonts.gstatic.com; script-src ''self'' ''unsafe-inline'';
+        worker-src ''self'' blob:; frame-ancestors ''none''; img-src ''self'' data:
+        cdn.redoc.ly; default-src ''self''; base-uri ''self''; frame-src ''self'';
+        style-src ''self'' ''unsafe-inline'' fonts.googleapis.com; object-src ''none'';
+        form-action ''self'''
       Content-Type:
       - application/json
       Cross-Origin-Opener-Policy:
