--- a/src/openforms/formio/dynamic_config/tests/files/vcr_cassettes/SelectboxesReferentielijstenOptionsTests/SelectboxesReferentielijstenOptionsTests.test_items_expired.yaml
+++ b/src/openforms/formio/dynamic_config/tests/files/vcr_cassettes/SelectboxesReferentielijstenOptionsTests/SelectboxesReferentielijstenOptionsTests.test_items_expired.yaml
@@ -24,11 +24,11 @@ interactions:
       Content-Length:
       - '225'
       Content-Security-Policy:
-      - 'worker-src ''self'' blob:; img-src ''self'' data: cdn.redoc.ly; font-src
-        ''self'' fonts.gstatic.com; script-src ''self'' ''unsafe-inline''; form-action
-        ''self''; default-src ''self''; frame-src ''self''; style-src ''self'' ''unsafe-inline''
-        fonts.googleapis.com; object-src ''none''; frame-ancestors ''none''; base-uri
-        ''self'''
+      - 'font-src ''self'' fonts.gstatic.com; script-src ''self'' ''unsafe-inline'';
+        worker-src ''self'' blob:; frame-ancestors ''none''; img-src ''self'' data:
+        cdn.redoc.ly; default-src ''self''; base-uri ''self''; frame-src ''self'';
+        style-src ''self'' ''unsafe-inline'' fonts.googleapis.com; object-src ''none'';
+        form-action ''self'''
       Content-Type:
       - application/json
       Cross-Origin-Opener-Policy:
