--- a/src/openforms/registrations/contrib/json_dump/tests/files/vcr_cassettes/JSONDumpBackendTests/JSONDumpBackendTests.test_metadata.yaml
+++ b/src/openforms/registrations/contrib/json_dump/tests/files/vcr_cassettes/JSONDumpBackendTests/JSONDumpBackendTests.test_metadata.yaml
@@ -10,8 +10,8 @@ interactions:
       \"\"]}, \"public_reference\": {\"title\": \"Public reference\", \"type\": \"string\"},
       \"form_version\": {\"title\": \"Form version\", \"type\": \"string\"}, \"registration_timestamp\":
       {\"title\": \"Registration timestamp\", \"type\": \"string\", \"format\": \"date-time\"}},
-      \"required\": [\"form_version\", \"public_reference\", \"registration_timestamp\",
-      \"auth_type\"], \"additionalProperties\": false}}"'
+      \"required\": [\"auth_type\", \"public_reference\", \"form_version\", \"registration_timestamp\"],
+      \"additionalProperties\": false}}"'
     headers:
       Accept:
       - '*/*'
@@ -44,11 +44,12 @@ interactions:
         reference\",\n          \"type\": \"string\"\n        },\n        \"registration_timestamp\":
         {\n          \"format\": \"date-time\",\n          \"title\": \"Registration
         timestamp\",\n          \"type\": \"string\"\n        }\n      },\n      \"required\":
-        [\n        \"form_version\",\n        \"public_reference\",\n        \"registration_timestamp\",\n
-        \       \"auth_type\"\n      ],\n      \"type\": \"object\"\n    },\n    \"values\":
-        {},\n    \"values_schema\": {\n      \"$schema\": \"https://json-schema.org/draft/2020-12/schema\",\n
-        \     \"additionalProperties\": false,\n      \"properties\": {},\n      \"required\":
-        [],\n      \"type\": \"object\"\n    }\n  },\n  \"message\": \"Data received\"\n}\n"
+        [\n        \"auth_type\",\n        \"public_reference\",\n        \"form_version\",\n
+        \       \"registration_timestamp\"\n      ],\n      \"type\": \"object\"\n
+        \   },\n    \"values\": {},\n    \"values_schema\": {\n      \"$schema\":
+        \"https://json-schema.org/draft/2020-12/schema\",\n      \"additionalProperties\":
+        false,\n      \"properties\": {},\n      \"required\": [],\n      \"type\":
+        \"object\"\n    }\n  },\n  \"message\": \"Data received\"\n}\n"
     headers:
       Connection:
       - close
@@ -57,7 +58,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Thu, 27 Mar 2025 14:00:50 GMT
+      - Tue, 08 Apr 2025 14:34:18 GMT
       Server:
       - Werkzeug/3.1.3 Python/3.12.9
     status:
