:heavy_plus_sign: Add and configure django-upgrade-check
This will replace openforms.upgrades. For the time being, we use both
so that we keep our current protections while we record the 3.2.0
version on deployments - once 3.3.0 is releasing, we can drop
openforms.upgrades.

--- a/requirements/base.in
+++ b/requirements/base.in
@@ -58,6 +58,7 @@ django-simple-certmanager
 django-solo
 django-tinymce
 django-treebeard
+django-upgrade-check
 django-yubin
 mozilla-django-oidc-db[setup-configuration]
 maykin-2fa
