--- a/src/openforms/registrations/contrib/json_dump/tests/files/vcr_cassettes/JSONDumpBackendTests/JSONDumpBackendTests.test_metadata.yaml
+++ b/src/openforms/registrations/contrib/json_dump/tests/files/vcr_cassettes/JSONDumpBackendTests/JSONDumpBackendTests.test_metadata.yaml
@@ -1,17 +1,16 @@
 interactions:
 - request:
-    body: '"{\"values\": {}, \"values_schema\": {\"$schema\": \"https://json-schema.org/draft/2020-12/schema\",
-      \"type\": \"object\", \"properties\": {}, \"required\": [], \"additionalProperties\":
-      false}, \"metadata\": {\"auth_type\": \"bsn\", \"public_reference\": \"OF-ABC123\",
-      \"form_version\": \"Version 1.0\", \"registration_timestamp\": \"2025-01-30T13:05:00Z\"},
-      \"metadata_schema\": {\"$schema\": \"https://json-schema.org/draft/2020-12/schema\",
-      \"type\": \"object\", \"properties\": {\"auth_type\": {\"title\": \"Authentication
-      type\", \"type\": \"string\", \"enum\": [\"bsn\", \"kvk\", \"pseudo\", \"employee_id\",
-      \"\"]}, \"public_reference\": {\"title\": \"Public reference\", \"type\": \"string\"},
-      \"form_version\": {\"title\": \"Form version\", \"type\": \"string\"}, \"registration_timestamp\":
-      {\"title\": \"Registration timestamp\", \"type\": \"string\", \"format\": \"date-time\"}},
-      \"required\": [\"auth_type\", \"public_reference\", \"form_version\", \"registration_timestamp\"],
-      \"additionalProperties\": false}}"'
+    body: '{"values": {}, "values_schema": {"$schema": "https://json-schema.org/draft/2020-12/schema",
+      "type": "object", "properties": {}, "required": [], "additionalProperties":
+      false}, "metadata": {"auth_type": "bsn", "public_reference": "OF-ABC123", "form_version":
+      "Version 1.0", "registration_timestamp": "2025-01-30T13:05:00Z"}, "metadata_schema":
+      {"$schema": "https://json-schema.org/draft/2020-12/schema", "type": "object",
+      "properties": {"auth_type": {"title": "Authentication type", "type": "string",
+      "enum": ["bsn", "kvk", "pseudo", "employee_id", ""]}, "public_reference": {"title":
+      "Public reference", "type": "string"}, "form_version": {"title": "Form version",
+      "type": "string"}, "registration_timestamp": {"title": "Registration timestamp",
+      "type": "string", "format": "date-time"}}, "required": ["auth_type", "public_reference",
+      "form_version", "registration_timestamp"], "additionalProperties": false}}'
     headers:
       Accept:
       - '*/*'
@@ -22,11 +21,11 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '1027'
-      Content-Type:
-      - application/json
+      - '909'
       User-Agent:
       - python-requests/2.32.2
+      content-type:
+      - application/json
     method: POST
     uri: http://localhost/json_plugin
   response:
@@ -58,9 +57,9 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Thu, 10 Apr 2025 09:10:13 GMT
+      - Fri, 18 Apr 2025 08:35:00 GMT
       Server:
-      - Werkzeug/3.1.3 Python/3.12.10
+      - Werkzeug/3.1.3 Python/3.12.8
     status:
       code: 201
       message: CREATED
