:wrench: Tweak linter configuration
* Disable extra checks for now and gradually adopt them
* Copy over our excludes from setup.cfg

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,19 +66,29 @@ filename = "package.json"
 search = "    \"version\": \"{current_version}\""
 replace = "    \"version\": \"{new_version}\""
 
+[tool.ruff]
+extend-exclude = [
+    "static",
+    "media",
+    "src/openforms/conf/local_example.py",
+    # Might be created by developers:
+    "src/openforms/conf/local.py",
+    "nlx",
+]
+
 [tool.ruff.lint]
 extend-select = [
-    "UP",  # pyupgrade
-    "DJ",  # django
-    "LOG", # logging
-    "G",
-    "I",   # isort
-    "E",   # pycodestyle
-    "F",   # pyflakes
-    "PERF",# perflint
-    "B006",# flake8-bugbear
-    "B010",
-    "B904",
+    # "UP",  # pyupgrade
+    # "DJ",  # django
+    # "LOG", # logging
+    # "G",
+    # "I",   # isort
+    # "E",   # pycodestyle
+    # "F",   # pyflakes
+    # "PERF",# perflint
+    # "B006",# flake8-bugbear
+    # "B010",
+    # "B904",
 ]
 
 [tool.ruff.lint.isort]
