--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -471,6 +471,9 @@ jobs:
         run: |
           docker compose run -e RELEASE=${RELEASE} web \
             python src/manage.py migrate
+          # run fix scripts to verify they don't crash
+          docker compose run -e RELEASE=${RELEASE} web \
+            /app/bin/test_fix_scripts.sh
         env:
           RELEASE: '3.0.1'
           # ensure local image gets used
