--- a/src/openforms/contrib/brk/tests/files/vcr_cassettes/BRKValidatorTestCase/BRKValidatorTestCase.test_brk_validator_bsn.yaml
+++ b/src/openforms/contrib/brk/tests/files/vcr_cassettes/BRKValidatorTestCase/BRKValidatorTestCase.test_brk_validator_bsn.yaml
@@ -32,17 +32,17 @@ interactions:
       - '113'
       Content-Security-Policy:
       - 'default-src ''self''; script-src ''self''; connect-src ''self''; style-src
-        ''self''; img-src ''self'' data:; object-src ''self''; font-src ''self'' https://*.kadaster.nl;
+        ''self''; img-src ''self'' data:; object-src ''none''; font-src ''self'' https://*.kadaster.nl;
         media-src ''self'' data: https://*.kadaster.nl; frame-src ''self''; frame-ancestors
-        ''self'';'
+        ''none''; upgrade-insecure-requests;'
       Content-Type:
       - application/hal+json
       Date:
-      - Thu, 27 Mar 2025 13:46:34 GMT
+      - Wed, 23 Apr 2025 08:54:19 GMT
       Keep-Alive:
       - timeout=60
       Referrer-Policy:
-      - strict-origin-when-cross-origin
+      - no-referrer
       Server:
       - Unspecified
       Vary:
@@ -50,7 +50,7 @@ interactions:
       X-Content-Type-Options:
       - nosniff
       X-Frame-Options:
-      - SAMEORIGIN
+      - DENY
       X-Xss-Protection:
       - 1; mode=block
     status:
@@ -89,17 +89,17 @@ interactions:
       - '135'
       Content-Security-Policy:
       - 'default-src ''self''; script-src ''self''; connect-src ''self''; style-src
-        ''self''; img-src ''self'' data:; object-src ''self''; font-src ''self'' https://*.kadaster.nl;
+        ''self''; img-src ''self'' data:; object-src ''none''; font-src ''self'' https://*.kadaster.nl;
         media-src ''self'' data: https://*.kadaster.nl; frame-src ''self''; frame-ancestors
-        ''self'';'
+        ''none''; upgrade-insecure-requests;'
       Content-Type:
       - application/hal+json
       Date:
-      - Thu, 27 Mar 2025 13:46:34 GMT
+      - Wed, 23 Apr 2025 08:54:19 GMT
       Keep-Alive:
       - timeout=60
       Referrer-Policy:
-      - strict-origin-when-cross-origin
+      - no-referrer
       Server:
       - Unspecified
       Vary:
@@ -107,7 +107,7 @@ interactions:
       X-Content-Type-Options:
       - nosniff
       X-Frame-Options:
-      - SAMEORIGIN
+      - DENY
       X-Xss-Protection:
       - 1; mode=block
     status:
@@ -151,17 +151,17 @@ interactions:
       - '736'
       Content-Security-Policy:
       - 'default-src ''self''; script-src ''self''; connect-src ''self''; style-src
-        ''self''; img-src ''self'' data:; object-src ''self''; font-src ''self'' https://*.kadaster.nl;
+        ''self''; img-src ''self'' data:; object-src ''none''; font-src ''self'' https://*.kadaster.nl;
         media-src ''self'' data: https://*.kadaster.nl; frame-src ''self''; frame-ancestors
-        ''self'';'
+        ''none''; upgrade-insecure-requests;'
       Content-Type:
       - application/hal+json
       Date:
-      - Thu, 27 Mar 2025 13:46:35 GMT
+      - Wed, 23 Apr 2025 08:54:19 GMT
       Keep-Alive:
       - timeout=60
       Referrer-Policy:
-      - strict-origin-when-cross-origin
+      - no-referrer
       Server:
       - Unspecified
       Vary:
@@ -169,7 +169,7 @@ interactions:
       X-Content-Type-Options:
       - nosniff
       X-Frame-Options:
-      - SAMEORIGIN
+      - DENY
       X-Xss-Protection:
       - 1; mode=block
     status:
@@ -214,17 +214,17 @@ interactions:
       - '784'
       Content-Security-Policy:
       - 'default-src ''self''; script-src ''self''; connect-src ''self''; style-src
-        ''self''; img-src ''self'' data:; object-src ''self''; font-src ''self'' https://*.kadaster.nl;
+        ''self''; img-src ''self'' data:; object-src ''none''; font-src ''self'' https://*.kadaster.nl;
         media-src ''self'' data: https://*.kadaster.nl; frame-src ''self''; frame-ancestors
-        ''self'';'
+        ''none''; upgrade-insecure-requests;'
       Content-Type:
       - application/hal+json
       Date:
-      - Thu, 27 Mar 2025 13:46:35 GMT
+      - Wed, 23 Apr 2025 08:54:20 GMT
       Keep-Alive:
       - timeout=60
       Referrer-Policy:
-      - strict-origin-when-cross-origin
+      - no-referrer
       Server:
       - Unspecified
       Vary:
@@ -232,7 +232,7 @@ interactions:
       X-Content-Type-Options:
       - nosniff
       X-Frame-Options:
-      - SAMEORIGIN
+      - DENY
       X-Xss-Protection:
       - 1; mode=block
     status:
