--- a/src/openforms/formio/dynamic_config/tests/files/vcr_cassettes/RadioReferenceListsOptionsTests/RadioReferenceListsOptionsTests.test_items_expired.yaml
+++ b/src/openforms/formio/dynamic_config/tests/files/vcr_cassettes/RadioReferenceListsOptionsTests/RadioReferenceListsOptionsTests.test_items_expired.yaml
@@ -15,18 +15,63 @@ interactions:
   response:
     body:
       string: '{"count":1,"next":null,"previous":null,"results":[{"code":"item-not-geldig-anymore","naam":"Tabel
-        that contains item not geldig anymore","beheerder":{"naam":"","email":"","afdeling":"","organisatie":""},"einddatumGeldigheid":"2020-02-03T08:48:49Z"}]}'
+        that contains item not geldig anymore","beheerder":{"naam":"","email":"","afdeling":"","organisatie":""},"einddatumGeldigheid":null}]}'
     headers:
       Allow:
       - GET, HEAD, OPTIONS
       Content-Length:
-      - '250'
+      - '232'
       Content-Security-Policy:
-      - 'worker-src ''self'' blob:; frame-ancestors ''none''; object-src ''none'';
-        script-src ''self'' ''unsafe-inline''; base-uri ''self''; font-src ''self''
-        fonts.gstatic.com; default-src ''self''; img-src ''self'' data: cdn.redoc.ly;
-        frame-src ''self''; style-src ''self'' ''unsafe-inline'' fonts.googleapis.com;
-        form-action ''self'''
+      - 'form-action ''self''; style-src ''self'' ''unsafe-inline'' fonts.googleapis.com;
+        img-src ''self'' data: cdn.redoc.ly; frame-ancestors ''none''; worker-src
+        ''self'' blob:; default-src ''self''; script-src ''self'' ''unsafe-inline'';
+        object-src ''none''; frame-src ''self''; font-src ''self'' fonts.gstatic.com;
+        base-uri ''self'''
+      Content-Type:
+      - application/json
+      Cross-Origin-Opener-Policy:
+      - same-origin
+      Referrer-Policy:
+      - same-origin
+      Vary:
+      - origin
+      X-Content-Type-Options:
+      - nosniff
+      X-Frame-Options:
+      - DENY
+    status:
+      code: 200
+      message: OK
+- request:
+    body: null
+    headers:
+      Accept:
+      - '*/*'
+      Accept-Encoding:
+      - gzip, deflate, br
+      Accept-Language:
+      - nl
+      Connection:
+      - keep-alive
+      User-Agent:
+      - python-requests/2.32.2
+    method: GET
+    uri: http://localhost:8004/api/v1/items?tabel__code=item-not-geldig-anymore
+  response:
+    body:
+      string: '{"count":1,"next":null,"previous":null,"results":[{"code":"not_geldig_option","naam":"Not
+        geldig option","begindatumGeldigheid":"2025-01-07T14:17:59Z","einddatumGeldigheid":"2025-02-07T14:17:59Z","aanvullendeGegevens":null}]}'
+    headers:
+      Allow:
+      - GET, HEAD, OPTIONS
+      Content-Length:
+      - '225'
+      Content-Security-Policy:
+      - 'form-action ''self''; style-src ''self'' ''unsafe-inline'' fonts.googleapis.com;
+        img-src ''self'' data: cdn.redoc.ly; frame-ancestors ''none''; worker-src
+        ''self'' blob:; default-src ''self''; script-src ''self'' ''unsafe-inline'';
+        object-src ''none''; frame-src ''self''; font-src ''self'' fonts.gstatic.com;
+        base-uri ''self'''
       Content-Type:
       - application/json
       Cross-Origin-Opener-Policy:
