:rotating_light: Enabled more bugbear rules
With the goal of being able to enable all of them or move to an exclude list.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -86,11 +86,15 @@ extend-select = [
     # "E",   # pycodestyle
     "F",     # pyflakes
     # "PERF",# perflint
-    "B006",  # flake8-bugbear
-    "B010",
+    "B",     # flake8-bugbear
     # "B904",
     "TID251",# tidy-imports
     "TID253",
+]
+ignore = [
+    "B017",
+    "B018",
+    "B904",
 ]
 
 [tool.ruff.lint.isort]
