:label: Type check more of the objects API registration plugin
Getting ever closer to be able to include a higher level
directory in the config.

--- a/pyright.pyproject.toml
+++ b/pyright.pyproject.toml
@@ -51,6 +51,7 @@ include = [
     "src/openforms/registrations/contrib/stuf_zds/options.py",
     "src/openforms/registrations/contrib/stuf_zds/plugin.py",
     "src/openforms/registrations/contrib/stuf_zds/typing.py",
+    "src/openforms/registrations/contrib/objects_api/api/",
     "src/openforms/registrations/contrib/objects_api/handlers/",
     "src/openforms/registrations/contrib/objects_api/plugin.py",
     "src/openforms/registrations/contrib/objects_api/registration_variables.py",
