:label: Clean up types relates to v1 objects API handler
We can use the same types used during registration to
add more type information to the accompanying
template tags to that produce JSON.

--- a/pyright.pyproject.toml
+++ b/pyright.pyproject.toml
@@ -53,6 +53,8 @@ include = [
     "src/openforms/registrations/contrib/stuf_zds/typing.py",
     "src/openforms/registrations/contrib/objects_api/api/",
     "src/openforms/registrations/contrib/objects_api/handlers/",
+    "src/openforms/registrations/contrib/objects_api/migrations/",
+    "src/openforms/registrations/contrib/objects_api/templatetags/",
     "src/openforms/registrations/contrib/objects_api/plugin.py",
     "src/openforms/registrations/contrib/objects_api/registration_variables.py",
     "src/openforms/registrations/contrib/objects_api/submission_registration.py",
