:label: Enable rest of objects API registration plugin in type checking

--- a/pyright.pyproject.toml
+++ b/pyright.pyproject.toml
@@ -55,10 +55,15 @@ include = [
     "src/openforms/registrations/contrib/objects_api/handlers/",
     "src/openforms/registrations/contrib/objects_api/migrations/",
     "src/openforms/registrations/contrib/objects_api/templatetags/",
+    "src/openforms/registrations/contrib/objects_api/admin.py",
+    "src/openforms/registrations/contrib/objects_api/apps.py",
+    "src/openforms/registrations/contrib/objects_api/config.py",
+    "src/openforms/registrations/contrib/objects_api/models.py",
     "src/openforms/registrations/contrib/objects_api/plugin.py",
     "src/openforms/registrations/contrib/objects_api/registration_variables.py",
     "src/openforms/registrations/contrib/objects_api/submission_registration.py",
     "src/openforms/registrations/contrib/objects_api/typing.py",
+    "src/openforms/registrations/contrib/objects_api/utils.py",
     "src/openforms/registrations/contrib/zgw_apis/",
     # core submissions app
     "src/openforms/submissions/api/validation.py",
