Fixed wrong attribute name for the frontend

--- a/src/openforms/prefill/contrib/family_members/tests/files/vcr_cassettes/FamilyMembersPrefillPluginHCV2Tests/FamilyMembersPrefillPluginHCV2Tests.test_children_deceased.yaml
+++ b/src/openforms/prefill/contrib/family_members/tests/files/vcr_cassettes/FamilyMembersPrefillPluginHCV2Tests/FamilyMembersPrefillPluginHCV2Tests.test_children_deceased.yaml
@@ -41,7 +41,7 @@ interactions:
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Wed, 21 May 2025 12:16:08 GMT
+      - Wed, 04 Jun 2025 14:09:24 GMT
       Server:
       - Kestrel
     status:
@@ -49,7 +49,8 @@ interactions:
       message: OK
 - request:
     body: '{"type": "RaadpleegMetBurgerservicenummer", "burgerservicenummer": ["999970409",
-      "999970161", "999970173", "999970185"], "fields": ["burgerservicenummer", "overlijden"]}'
+      "999970161", "999970173", "999970185"], "fields": ["burgerservicenummer", "burgerservicenummer",
+      "overlijden"]}'
     headers:
       Accept:
       - '*/*'
@@ -60,7 +61,7 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '169'
+      - '192'
       Content-Type:
       - application/json; charset=utf-8
       User-Agent:
@@ -86,7 +87,7 @@ interactions:
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Wed, 21 May 2025 12:16:08 GMT
+      - Wed, 04 Jun 2025 14:09:24 GMT
       Server:
       - Kestrel
     status:
